Changed rules descriptions and titles.

--- a/src/main/resources/metadata/R14RefactoringRule_java.html
+++ b/src/main/resources/metadata/R14RefactoringRule_java.html
@@ -1,9 +1,12 @@
-<p>This rule detects methods with same type as argument</p>
+<p>Logic classes must be annotated with Stataless annotation</p>
 <h2>Noncompliant Code Example</h2>
-<pre>
-TO DO
+<pre>public class AuthorLogic {
+    ...
+}
 </pre>
 <h2>Compliant Solution</h2>
-<pre>
-TO DO
+<pre>@Stateless
+public class AuthorLogic {
+    ...
+}
 </pre>
